fix content alignment in top toolbar if user is logged in

--- a/src/containers/Homepage/CSS/search_results_page.module.css
+++ b/src/containers/Homepage/CSS/search_results_page.module.css
@@ -15,6 +15,7 @@
 .header i {
 	color: #4b4b4e;
 	margin-left: 13px;
+	margin-right: auto;
 }
 
 .no_result {
